styles.css
/* ... */
.description {
  font-size: small;
  color:rgb(141, 141, 141);
}



.article {
  background-color: #ffffff;
  padding-right: 48px;
  padding-left: 48px;
  padding-top: 24px;
  padding-bottom: 48px;
}




  @media (min-width: 768px) {
    .grid-section-article {
      display: grid;
      width: 40%;
      grid-template-columns: repeat(1, 1fr);
      grid-gap: 24px;
      flex-wrap: wrap;
    }
  }
  


  .card-article {
    position: relative;
    text-align: left ;
    flex: 1 1 300px; /* adjust the flex value to change the size of the cards*/
    /* add styles for the card */
    background-color: white; /* add background color */
    border-radius: 24px; /* add border radius */
    box-shadow: 0px 0px 6px rgba(204, 204, 204, 0.469); /* add box shadow */
    padding-bottom: 24px; /* add padding */
    padding-top: 16px;
    padding-left: 24px;
    padding-right: 24px;
    cursor:pointer;
    color: #333;
  }


  .card-article:hover {
    border: #4b7869 2px;
    box-shadow: 0px 0px 12px rgba(172, 171, 171, 0.337); /* add box shadow */
    color:#4b7869;
}




.contact-popup-container {
position: fixed;
top: 0;
left: 0;
width: 100%;
height: 100%;
z-index: 99;
display: none; /* initial state is hidden */

}

.no-scroll {
  overflow: hidden;
}



.contact-form-popup {
  position: absolute;
  top: 50%;
  right: 0;
  top: 0;
  bottom: 0;
  width: 350px;
  background-color: rgb(242, 242, 242);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  z-index: 100;
  visibility: visible;
  padding: 24px;

}

.contact-form-popup.show {
  display: block;
  visibility: visible;

}


.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 100;
}

.close-button  {
  position: fixed;
  top: 40px;
  padding-right: 24px;
  right: 0;
  color: rgb(30, 45, 40);
  font-size: 48px;
  cursor: pointer;
  border: 0px;
  font-size: x-large;
}

.close-button:hover  {
  color: rgb(106, 106, 106);
}


.input {
  border-color: rgb(173, 173, 173);
}


.popup {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7); /* Dark transparent background */
  z-index: 9999; /* Make sure the popup is on top of everything */
  display: none; /* Hide the popup by default */
}


.popup-content {
  position: absolute;
  top: 50%; /* Position the content in the middle of the screen */
  left: 50%;
  transform: translate(-50%, -50%); /* Move the content up and left by 50% of its own size */
  padding: 24px; /* 24px padding for the content */
  width: calc(100% - 24px); /* Take up 100% of the screen width minus 112px for the background */
  height: calc(100% - 112px); /* Take up 100% of the screen height minus 112px for the background */
  max-width: 600px; /* Limit the maximum width of the content */
  max-height: 800px; /* Limit the maximum height of the content */
  background-color: #fefefe; /* White background color */
  border: 2px solid rgb(182, 215, 197); /* Green border */
  border-radius: 20px; /* Rounded corners */
}

/* Popup styling for smaller devices */
@media (max-width: 767px) {
  .popup-content {
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    margin: 0; /* Remove the margin */
    border-radius: 0; /* Remove the border radius */
  }
}





.content-wrapper {
overflow-y: auto;
height: 90%;
border-radius: 20px;
padding: 32px; /* you may need to adjust the padding to match the .popup-content element */
}

.popup-title {
  color:rgb(31, 36, 32);
  font-size: 32px;
  line-height: 38px;
  margin: 0px;
  }

.popup-description {
color:rgb(52, 62, 56);
font-size: small;
}

.popup-overview {
color:rgb(31, 36, 32);
font-size: 16px;
line-height: 24px;
}

.close {
  position: absolute;
  top: 0;
  right: 0;
  color: rgb(30, 45, 40);
  font-size: 48px;
  cursor: pointer;
  padding: 24px 32px 0px 0px;
}










  footer {
    display: flexbox;
    align-items: center; /* align the content in the center vertically */
    background-color: rgb(236, 236, 236); /* add background color */
    color: rgb(135, 135, 135); /* add text color */
  }

  .social-icons {
    display: flex;
    justify-content: space-between;
    width: 32px;
  }

  .social-icons img{
    padding: 5px;
    width: 48px;
    
 }

  .footer-container {
    display: flex;
    align-items: center;
    padding: 24px;
  }
  

  .contacts {
    padding-left: 32px;
    padding-top: 5px;
    padding-bottom: 5px;
    white-space: nowrap;
    align-content: center;
    margin: 0px;
    display: flex;
    align-items: center; /* aligns the content vertically in the center */
    }
    
    
    
    
    
 

  
  


  /* Add additional styles for the form and the social icons */
  form label {
    display: block; /* make the labels display as block elements */
    margin-bottom: 8px; /* add margin to the bottom of the labels */
  }
  
  form input[type="text"], form input[type="email"], form textarea {
    min-width: 220px; /* make the inputs the same width */
    width: 100%;
    padding: 12px 12px; /* add padding */
    margin-bottom: 12px; /* add margin to the bottom of the inputs */
    border-radius: 8px;
    box-sizing: border-box; /* include the padding and border in the total width and height of the element */
  }



 

